Working adding tags to a recipe and making/editing new tags

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
 <h1>Recipe Book</h1>
 <a href="/recipes/new">Add a Recipe</a>
 <a href="/recipes/view">View a Recipe</a>
+<a href="/tag/new">Add a Tag</a>
