--- a/views/ingredient_form.erb
+++ b/views/ingredient_form.erb
@@ -14,6 +14,18 @@
   <button class="btn btn-default" type="submit">Add ingredient</button>
 </form>
 
+<h3>Tag This Recipe</h3>
+<form class="" action="/recipes/<%= @recipe.id() %>/tags" method="post">
+  <input type="hidden" name="_method" value="patch">
+  <% if @tags.any?() %>
+    <% @tags.each do |tag| %><br>
+
+      <input type="checkbox" name="tag_ids[]" value="<%=tag.id%>" id="<%=tag.id%>" <%= @recipe.tags.include?(Tag.find(tag.id().to_i()))?"checked":"" %>> <%= tag.name() %> </input>
+    <% end %>
+  <% end %> <br>
+  <button class="btn btn-default" type="subnmit">Update Tags!</button>
+</form>
+
 <form action="/recipes/<%= @recipe.id() %>/ingredients" method="post">
   <input type="hidden" name="_method" value="delete">
 
