--- a/views/add_tag.erb
+++ b/views/add_tag.erb
@@ -15,5 +15,9 @@
 <form action="/tag/new" method="post">
   <label for="name">Tag name</label>
   <input type="text" name="name">
-  <button type="submit">Add Tag!</button>
+  <button class="btn btn-primary" type="submit" >Add Tag!</button>
 </form>
+
+<div class="bottom">
+  <a class="btn btn-default" href="/">Home</a>
+</div>
