--- a/views/recipes.erb
+++ b/views/recipes.erb
@@ -8,4 +8,5 @@
   There are no recipes.
 <% end %>
 
-<a class="btn btn-default" href="/">Back</a>
+<a class="btn btn-primary" href="/">Back</a>
+<a class="btn btn-default" href="/">Home</a>
