--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8">
     <title>Recipes</title>
   </head>
   <body>
     <div class="container">
+      <div class="jumbotron">
+        <h1>Cooking World</h1>
+      </div>
       <%= yield %>
     </div>
   </body>
