--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,7 @@
 <h1>Recipe Book</h1>
 <a href="/recipes/new">Add a Recipe</a>
 <a href="/tag/new">Add a Tag</a>
+<a href="/ingredients/new">Add ingredients</a>
 
 <h1>Recipes</h1>
 
