--- a/views/ingredients_edit.erb
+++ b/views/ingredients_edit.erb
@@ -2,7 +2,6 @@
 
 <form action="/ingredients/<%= @ingredient.id() %>" method="post">
   <input type="hidden" name="_method" value="patch">
-  <input type="hidden" name="recipe_id" value="<%= @recipe.id() %>">
   <label for="name"></label>
   <input type="text" name="name" required placeholder="Ingredient Name">
 
@@ -12,10 +11,9 @@
 <div class="bottom">
   <form action="/ingredients/<%= @ingredient.id() %>" method="post">
     <input type="hidden" name="_method" value="delete">
-    <input type="hidden" name="recipe_id" value="<%= @recipe.id() %>">
 
     <button class="btn btn-danger" type="submit">Delete Ingredient</button>
-    <a class="btn btn-primary" href="/recipes/<%= @recipe.id() %>/ingredients">Back</a>
+    <a class="btn btn-primary" href="/ingredients/new">Back</a>
   </form>
 
 </div>
